--- a/BackEnd/ECommerceProject/package.json
+++ b/BackEnd/ECommerceProject/package.json
@@ -8,5 +8,8 @@
   },
   "type": "module",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2"
+  }
 }
