--- a/BackEnd/ECommerceProject/package.json
+++ b/BackEnd/ECommerceProject/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
