--- a/BackEnd/ECommerceProject/package.json
+++ b/BackEnd/ECommerceProject/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "winston": "^3.11.0"
   }
 }
