--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "vite": "^5.2.8"
   }
 }
